--- a/02-ansible/02-ansible/inicio3.yml
+++ b/02-ansible/02-ansible/inicio3.yml
@@ -26,7 +26,12 @@
         upgrade: yes
         update_cache: yes
         cache_valid_time: 86400 #Um dia
-    
+
+
+    - name: "Roda: remove nginx"
+      become: yes
+      shell: "apt remove nginx* -y"
+
     - name: "Instala pacotes em lote"
       apt:
         name: "{{ item }}"
@@ -49,6 +54,7 @@
         dest: "/tmp/wordpress.tar.gz"
     
     - name: "Fazendo descompactação dos arquivos do WP"
+      become: yes
       unarchive:
         src: "/tmp/wordpress.tar.gz"
         dest: "/var/www"
@@ -73,14 +79,14 @@
       become: yes
 
     #### Altera direto no apache
-    # - name: "altera apache"
-    #   replace:
-    #     path: '/etc/apache2/sites-available/000-default.conf'
-    #     regexp: "{{ item.regex }}"
-    #     replace: "{{ item.value }}"
-    #   with_items:
-    #     - { regex: '/var/www/html', value: '/var/www/wordpress' }
-    #   become: yes
+  #  - name: "altera apache"
+  #    replace:
+  #      path: '/etc/apache2/sites-available/000-default.conf'
+  #      regexp: "{{ item.regex }}"
+  #      replace: "{{ item.value }}"
+  #    with_items:
+  #      - { regex: '/var/www/html', value: '/var/www/wordpress' }
+  #    become: yes
 
     - name: "Trocando pasta do render do apache para o wordpress"
       copy:
@@ -96,24 +102,24 @@
         name: mysql
         state: started
 
-    # - name: "Criando senha root mysql"
-    #   become: yes
-    #   mysql_user:
-    #     name: root
-    #     host: localhost
-    #     password: root
-    #     priv: "*.*:ALL,GRANT"
+    - name: "Criando senha root mysql"
+      become: yes
+      mysql_user:
+         name: root
+         host: localhost
+         password: root
+         priv: "*.*:ALL,GRANT"
 
-    # - name: "Cria o banco de dados MySQL"
-    #   mysql_db:
-    #     name: banco_wordpress
-    #     login_user: root
-    #     login_password: root
-    #     state: present
+    - name: "Cria o banco de dados MySQL"
+      mysql_db:
+         name: banco_wordpress
+         login_user: root
+         login_password: root
+         state: present
 
-    # - shell: cat /var/www/wordpress/wp-config.php
-    #   register: ps
-    # - debug:
-    #     msg: " '{{ ps.stdout_lines }}' "
+    - shell: cat /var/www/wordpress/wp-config.php
+      register: ps
+    - debug:
+        msg: " '{{ ps.stdout_lines }}' "
 
     
