--- a/07-kubernetes/01-pod/pod-nginx.yml
+++ b/07-kubernetes/01-pod/pod-nginx.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: bruno-nginx
+  name: bruno2-nginx
   labels:
-    app: bruno-nginx
+    app: bruno2-nginx
 spec:
   containers:
-    - name: container-pod-nginx
-      image: brunopassi/app-validador-cpf-java:0.0.1
+    - name: container-pod2-nginx
+      image: nginx:latest
       ports:
         - containerPort: 80
 
