--- a/07-kubernetes/02-nodeport/nodeport-nginx.yml
+++ b/07-kubernetes/02-nodeport/nodeport-nginx.yml
@@ -3,14 +3,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodeport-pod-nodejs
+  name: nodeport-pod-bruno-nginx
 spec:
   type: NodePort
   ports:
-    - port: 80
-      nodePort: 30001 # 30000 ~ 32767
+    - port: 8080
+      nodePort: 8080 # 30000 ~ 32767
   selector:
-    app: didox-nginx
+    app: bruno-nginx
 
 # kubectl apply -f node-port-nginx.yml
 # kubectl describe -f node-port-nginx.yml
