--- a/08-jenkins/0-build-jenkins-kubernets-ansible/1-ansible/provisionar.yml
+++ b/08-jenkins/0-build-jenkins-kubernets-ansible/1-ansible/provisionar.yml
@@ -9,8 +9,20 @@
       shell: hostname jenkins && echo "jenkins" > /etc/hostname
       become: yes
 
-    - name: "Update apt"
-      shell: "apt-get update"
+    - name: "Install terraform passo 1"
+      shell: sudo apt-get update && sudo apt-get install -y gnupg software-properties-common curl
+
+    - name: "Install terraform passo 2"
+      shell: curl -fsSL https://apt.releases.hashicorp.com/gpg | sudo apt-key add -
+
+    - name: "Install terraform passo 3"
+      shell: sudo apt-add-repository "deb [arch=amd64] https://apt.releases.hashicorp.com $(lsb_release -cs) main"
+
+    - name: "Install terraform passo 4"
+      shell: sudo apt-get update && sudo apt-get install terraform -y
+
+    # - name: "Update apt"
+    #   shell: "apt-get update"
 
     - name: "Instala mvn"
       shell: "sudo apt install maven -y"
@@ -18,8 +30,8 @@
     - name: "Instala unzip"
       shell: "sudo apt install unzip -y"
 
-    - name: "Instala awscli"
-      shell: "apt install awscli -y"
+    # - name: "Instala awscli"
+    #   shell: "apt install awscli -y"
       
     - name: "Instala java"
       shell: "apt install default-jdk -y"
@@ -48,6 +60,19 @@
     # - shell: cat /var/lib/jenkins/secrets/initialAdminPassword
     #   register: ps
     # - debug: var=ps.stdout_lines
+
+    - name: "Copiando chave"
+      copy:
+        src: "/home/ubuntu/.ssh/id_rsa"
+        dest: "/home/ubuntu/.ssh/id_rsa"
+      
+    - name: "Copia chave privada"
+      copy:
+        src: "/home/ubuntu/.ssh/id_rsa"
+        dest: "/home/ubuntu/.ssh/id_rsa"
+        owner: ubuntu
+        group: ubuntu
+        mode: '0400'
 
     - shell: cat /var/lib/jenkins/secrets/initialAdminPassword
       register: ps
